update wasachat
