# wasa pubblico/wasachat/doc/api.yaml
@@ -23,10 +23,8 @@ paths:
               properties:
                 name:
                   type: string
-                  example: "Maria.3"
-                  pattern: 'ˆ.*?$'
-                  minLength: 3
-                  maxLength: 16
+                  example: "Maria3"
+                  minLength: 1
                   description:
                     nome utente
         required: true
@@ -43,6 +41,16 @@ paths:
                     example: "abcdef012345"
                     description: 
                       identificatore
+                      
+  /wasachat/{utente}/chats: 
+    parameters:
+    - name: utente
+      in: path
+      required: true
+      description: è il nickname dell'utente
+      schema:
+        type: string
+        example: Carlo
     get:
       tags: ["Schermata principale"]
       summary: "Visualizza conversazioni"
@@ -60,7 +68,6 @@ paths:
                 properties:
                   messages:
                     type: array
-                    minItems: 1  # Garantisce che l'array non sia vuoto
                     items:
                       type: object
                       properties:
