# wasa pubblico/wasachat/service/api/api-handler.go
@@ -5,6 +5,7 @@ import (
 )
 
 // Handler returns an instance of httprouter.Router that handle APIs registered here
+// interfaccia utente ad alto livello
 func (rt *_router) Handler() http.Handler {
 	// Register routes
 	rt.router.GET("/context", rt.wrap(rt.getContextReply))
@@ -22,11 +23,13 @@ func (rt *_router) Handler() http.Handler {
 	rt.router.PUT("/wasachat/:utente/gruppi/:chat/nome", rt.ImpostaNomeGruppo)
 	rt.router.PUT("/wasachat/:utente/foto", rt.ImpostaFotoProfilo)
 	rt.router.PUT("/wasachat/:utente/nome", rt.ImpostaNome)
-	rt.router.GET("/wasachat/:utente/utenti", rt.VediProfili)
+	rt.router.GET("/wasachat/:utente/utenti", rt.VediProfili) //funzione di test
 	rt.router.GET("/wasachat/:utente/chats", rt.GetConversazioni)
 	rt.router.DELETE("/wasachat/:utente/messaggi/:commento", rt.EliminaCommento)
 	rt.router.POST("/wasachat/:utente/messaggi/:messaggio", rt.AggiungiCommento)
-
-	//rt.router.POST("/wasachat/test/:utente/conversazioniprivate", rt.CreaConversazionePrivata)
+	rt.router.POST("/wasachat/:utente/risposta/chats/chatprivate/:destinatario/:idMessaggio", rt.RispondiAMessaggioPrivato)
+	rt.router.POST("/wasachat/:utente/risposta/chats/gruppi/:chat/:idMessaggio", rt.RispondiAMessaggioGruppo)
+	rt.router.POST("/wasachat/:utente/inoltraGruppo/:nuovachat/:messaggio", rt.InoltraMessaggioGruppo)
+	rt.router.POST("/wasachat/:utente/inoltraPrivato/:destinatario/:messaggio", rt.InoltraMessaggioPrivato)
 	return rt.router
 }
